0033228: Data Exchange, DE Wrapper - Make the document argument of the method Read const handle

Rewrite document argument for DE_Wrapper Read method